# pretix-fontpack-free

./: .gitlab-ci.yml  MANIFEST.in  Makefile  README.rst  pretixplugin.toml  pyproject.toml  setup.cfg  setup.py
pretix_fontpackfree/: __init__.py  apps.py  signals.py
scripts/: update_fonts.py
